# Grape

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  COPYRIGHT  README.md  portfile.cmake  vcpkg.json
examples/: README.md  demo.cpp
include/: README.md  grape.h
